clusters/common/apps/home/tailscale-gateway/egress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: robbinsdale-envoy-gateway 
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
    tailscale.com/tailnet-fqdn: robbinsdale-home-envoy-gateway.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: https
    port: 443
    protocol: TCP
  - name: dns-tcp
    port: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    protocol: UDP
---
apiVersion: v1  
kind: Service
metadata:
  name: ottawa-envoy-gateway
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
    tailscale.com/tailnet-fqdn: ottawa-home-envoy-gateway.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: https
    port: 443
    protocol: TCP
  - name: dns-tcp
    port: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    protocol: UDP
