clusters/common/apps/home/tailscale-gateway/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ts-pihole-tcp
spec:
  parentRefs:
  - name: ts
    sectionName: pihole-tcp
  rules:
  - backendRefs:
    - name: ts-pihole-dns
      port: 53
